	Changes made between 0.6.2 and 0.6.3 (2003/04/13).

libpam_userpass support (with pam_userpass 0.9+).


	Changes made between 0.6.1 and 0.6.2 (2003/03/10).

Rate-limit the "sessions limit reached" log message similarly to the
per-source one; spotted by Michael Tokarev.

Started maintaining this change log (including information on a few
past versions), due to popular demand.  Added a separate file with
contact information (homepage, mailing list, author e-mail address,
commercial support).  Updated the installation instructions to note
the importance of authentication and locking method choice, added
instructions on the use of xinetd and popa3d's standalone mode.


	Changes made between 0.6 and 0.6.1 (2003/03/02).

Ensure proper logging of abnormally terminated sessions: distinguish
server failures from external modification to the mailbox by other
instances of popa3d or other MUAs.  Previously, if external mailbox
modification would occur during processing of a RETR command, popa3d
could improperly log a "server failure" (0.6) or even a "premature
disconnect" (older versions).

Added version.c and the -V option to print out version information.


	Changes made between 0.5.9 and 0.6 (2003/02/20).

Corrected the message size reporting bug introduced with 0.4.9.3 and
now reported on popa3d-users by Nuno Teixeira.  The only known POP3
client known to complain about this is fetchmail, and it would get the
mail correctly anyway.


	Changes made between 0.5.1 and 0.5.9 (2002/09/24).

Correctness and interoperability fixes.  This includes a workaround
for an Outlook Express client bug which would show up on body-less
messages.


	Changes made between 0.5 and 0.5.1 (2002/04/17).

Re-worked all of the UIDL calculation, adding support for multi-line
headers and re-considering which headers to use.

Let the local delivery agent help generate unique IDs by setting the
X-Delivery-ID: header.


	Changes made between 0.4 and 0.5 (2001/10/28).
