@@ -1,10 +1,14 @@
 /*
- * Miscellaneous syscall wrappers. See misc.h for the descriptions.
+ * Miscellaneous system and library call wrappers.
+ * See misc.h for the descriptions.
  */
 
 #include <unistd.h>
 #include <fcntl.h>
 #include <string.h>
+#include <stdarg.h>
+#include <stdlib.h>
+#include <limits.h>
 #include <errno.h>
 #include <sys/time.h>
 #include <sys/file.h>
@@ -84,4 +88,41 @@ int write_loop(int fd, char *buffer, int count)
 
 /* Should be equal to the requested size, unless our kernel got crazy. */
 	return offset;
+}
+
+char *concat(char *s1, ...)
+{
+	va_list args;
+	char *s, *p, *result;
+	unsigned long l, m, n;
+
+	m = n = strlen(s1);
+	va_start(args, s1);
+	while ((s = va_arg(args, char *))) {
+		l = strlen(s);
+		if ((m += l) < l) break;
+	}
+	va_end(args);
+	if (s || m >= INT_MAX) return NULL;
+
+	result = malloc(m + 1);
+	if (!result) return NULL;
+
+	memcpy(p = result, s1, n);
+	p += n;
+	va_start(args, s1);
+	while ((s = va_arg(args, char *))) {
+		l = strlen(s);
+		if ((n += l) < l || n > m) break;
+		memcpy(p, s, l);
+		p += l;
+	}
+	va_end(args);
+	if (s || m != n || p - result != n) {
+		free(result);
+		return NULL;
+	}
+
+	*p = 0;
+	return result;
 }
