@@ -2,6 +2,6 @@
  * popa3d version information.
  */
 
-char popa3d_version[] = "0.6.2";
-char popa3d_date[] = "$Date: 2003/03/10 00:30:38 $";
-char popa3d_id[] = "@(#) $Id: Owl/packages/popa3d/popa3d/version.c,v 1.2 2003/03/10 00:30:38 solar Exp $";
+char popa3d_version[] = "0.6.4";
+char popa3d_date[] = "$Date: 2003/11/16 21:59:14 $";
+char popa3d_id[] = "@(#) $Id: Owl/packages/popa3d/popa3d/version.c,v 1.3 2003/11/16 21:59:14 solar Exp $";
